crates/test-ui/ui/msg_send_not_allowed_mutable.stderr
error[E0277]: the trait bound `&mut NSObject: MsgSend` is not satisfied
 --> ui/msg_send_not_allowed_mutable.rs
  |
  |     let _: () = unsafe { msg_send![&mut *obj, test] };
  |                          ----------^^^^^^^^^-------
  |                          |         |
  |                          |         the trait `MessageReceiver` is not implemented for `&mut NSObject`
  |                          required by a bound introduced by this call
  |
  = help: the following other types implement trait `MessageReceiver`:
            &AnyClass
            &T
            &mut AnyObject
            *const AnyClass
            *const T
            *mut T
            NonNull<T>
  = note: `MessageReceiver` is implemented for `&NSObject`, but not for `&mut NSObject`
  = note: required for `&mut NSObject` to implement `MsgSend`

error[E0277]: the trait bound `&mut NSObject: MessageReceiver` is not satisfied
 --> ui/msg_send_not_allowed_mutable.rs
  |
  |     let _: Retained<NSObject> = unsafe { msg_send_id![obj, test] };
  |                                          ^^^^^^^^^^^^^^^^^^^^^^^ the trait `MessageReceiver` is not implemented for `&mut NSObject`
  |
  = help: the following other types implement trait `MessageReceiver`:
            &AnyClass
            &T
            &mut AnyObject
            *const AnyClass
            *const T
            *mut T
            NonNull<T>
  = note: `MessageReceiver` is implemented for `&NSObject`, but not for `&mut NSObject`
  = note: required for `&mut NSObject` to implement `MsgSend`
  = note: required for `RetainSemantics<5>` to implement `MsgSendRetained<&mut NSObject, Option<Retained<_>>>`
  = note: this error originates in the macro `$crate::__msg_send_id_helper` which comes from the expansion of the macro `msg_send_id` (in Nightly builds, run with -Z macro-backtrace for more info)
